--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <body>
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <img class="" src="assets/img/Logo1.png" height="200px">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#">หน้าหลัก</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,10 +39,6 @@
               <a class="nav-link disabled" href="#">ติดต่อ</a>
             </li>
           </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
     </header>
@@ -59,9 +56,9 @@
             <img class="" src="assets/img/Success1.jpg" alt="Responsive image">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Example headline</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <h1></h1>
+                <p></p>
+                <p></p>
               </div>
             </div>
           </div>
@@ -104,24 +101,11 @@
       <div class="container marketing">
 
         <!-- Three columns of text below the carousel -->
-        <div class="row">
-          <div class="col-lg-4">
+        <div class="">
+          <div class="container marketing">
             <img class="rounded-circle" src="assets/img/B-1.png" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="assets/img/B-2.png" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
-            <img class="rounded-circle" src="assets/img/B-3.png" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h1>ประวัติร้าน</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -130,54 +114,116 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+          <img src="assets/img/1.jpg" class="img-responsive" alt="Image 1">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
           </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/1.jpg" alt="Generic placeholder image">
-          </div>
+        </a>
         </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <!--END ITEM-->
+        <!--BEGIN ITEM-->
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10 ">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
+          <img src="assets/img/2.jpg" class="img-responsive" alt="Image 2">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
           </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/2.jpg" alt="Generic placeholder image">
-          </div>
+        </a>
         </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <!--END ITEM-->
+        <!--BEGIN ITEM-->
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full3.jpg">
+          <img src="assets/img/3.jpg" class="img-responsive" alt="Image 3">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
           </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="assets/img/3.jpg" alt="Generic placeholder image">
-          </div>
+        </a>
         </div>
-
-        <hr class="featurette-divider">
-
+        <!--END ITEM-->
+        <!--BEGIN ITEM-->
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full4.jpg">
+          <img src="assets/img/4.jpg" class="img-responsive" alt="Image 4">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+        </div>
+        <!--END ITEM-->
+        <!--BEGIN ITEM-->
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full5.jpg">
+          <img src="assets/img/5.jpg" class="img-responsive" alt="Image 5">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+        </div>
+        <!--END ITEM-->
+        <!--BEGIN ITEM-->
+        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
+          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full6.jpg">
+          <img src="assets/img/6.jpg" class="img-responsive" alt="Image 6">
+          <div class="gallery-box-caption">
+            <div class="gallery-box-content">
+              <div>
+                <i class="icon-lg ion-ios-search"></i>
+              </div>
+            </div>
+          </div>
+        </a>
+        </div>
+      </div>
+    </div>
         <!-- /END THE FEATURETTES -->
+        <!--Map Marker-->
+        <script type="text/javascript">
+          var map;
+              $(document).ready(function(){
+              map = new GMaps({
+                el: '#map',
+              lat:  18.7753932,
+              lng: 98.98137426,
+               zoom:17
+              });
 
-      </div><!-- /.container -->
+              map.addMarker({
+              lat:  18.7753932,
+              lng: 98.9813742,
+                title: 'Lima'
 
+              });
+              });
+        </script>
 
-      <!-- FOOTER -->
+        <!-- FOOTER -->
       <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+              <p>&copy; 2018 Success media All Right Reserved.</p>
       </footer>
     </main>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
