--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/success-style" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/carousel.css" rel="stylesheet">
   </head>
   <body>
-
     <header>
       <img class="" src="assets/img/Logo1.png" height="200px">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -43,7 +43,6 @@
       </nav>
     </header>
 
-    <main role="main">
 
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -62,6 +61,7 @@
               </div>
             </div>
           </div>
+        </div>
           <div class="carousel-item">
             <img class="second-slide" src="assets/img/Success1.jpg" alt="Responsive image">
             <div class="container">
@@ -82,7 +82,6 @@
               </div>
             </div>
           </div>
-        </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -91,9 +90,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
-
-
+  </div>
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -103,127 +100,46 @@
         <!-- Three columns of text below the carousel -->
         <div class="">
           <div class="container marketing">
-            <img class="rounded-circle" src="assets/img/B-1.png" alt="Generic placeholder image" width="140" height="140">
-            <h1>ประวัติร้าน</h1>
+            <h1 class="display-1 text-center">ประวัติร้าน</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
-
         <!-- START THE FEATURETTES -->
+                    <div class="container">
+                      <h1 class="display-1 text-center">ผลงาน</h1>
+                      <div class="row">
+                          <div class="col-lg-4">
+                              <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                              <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                              </a>
+                        </div>
 
-        <hr class="featurette-divider">
+                        <div class=" col-lg-4">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                             <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                             </a>
+                      </div>
 
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-          <img src="assets/img/1.jpg" class="img-responsive" alt="Image 1">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
+                      <div class=" col-lg-4">
+                          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                          <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                           </a>
+                    </div>
+                  </div>
+                </div>
+                    <!--END ITEM-->
+
+        <div class="container">
+          <h1 class="display-1 text-center">แผนที่</h1>
+            <div id="g-map" class="block">
+                <div id="map"></div>
             </div>
-          </div>
-        </a>
-        </div>
-        <!--END ITEM-->
-        <!--BEGIN ITEM-->
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10 ">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
-          <img src="assets/img/2.jpg" class="img-responsive" alt="Image 2">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div>
-        <!--END ITEM-->
-        <!--BEGIN ITEM-->
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full3.jpg">
-          <img src="assets/img/3.jpg" class="img-responsive" alt="Image 3">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div>
-        <!--END ITEM-->
-        <!--BEGIN ITEM-->
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full4.jpg">
-          <img src="assets/img/4.jpg" class="img-responsive" alt="Image 4">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div>
-        <!--END ITEM-->
-        <!--BEGIN ITEM-->
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full5.jpg">
-          <img src="assets/img/5.jpg" class="img-responsive" alt="Image 5">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div>
-        <!--END ITEM-->
-        <!--BEGIN ITEM-->
-        <div class="col-xs-6 col-sm-4 col-md-4 margin-bottom-10">
-          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full6.jpg">
-          <img src="assets/img/6.jpg" class="img-responsive" alt="Image 6">
-          <div class="gallery-box-caption">
-            <div class="gallery-box-content">
-              <div>
-                <i class="icon-lg ion-ios-search"></i>
-              </div>
-            </div>
-          </div>
-        </a>
-        </div>
       </div>
-    </div>
-        <!-- /END THE FEATURETTES -->
-        <!--Map Marker-->
-        <script type="text/javascript">
-          var map;
-              $(document).ready(function(){
-              map = new GMaps({
-                el: '#map',
-              lat:  18.7753932,
-              lng: 98.98137426,
-               zoom:17
-              });
-
-              map.addMarker({
-              lat:  18.7753932,
-              lng: 98.9813742,
-                title: 'Lima'
-
-              });
-              });
-        </script>
-
         <!-- FOOTER -->
       <footer class="container">
               <p>&copy; 2018 Success media All Right Reserved.</p>
       </footer>
-    </main>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -232,6 +148,28 @@
     <script src="assets/js/vendor/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
+    <script src="assets/js/jquery-1.11.1.min"></script>
+    <script src="assets/js/gmaps.js"></script>
+    <!-- <script src="assets/js/gmaps.min.js"></script> -->
+    <!-- /END THE FEATURETTES -->
+    <!--Map Marker-->
+    <script type="text/javascript">
+    	var map;
+      $(document).ready(function(){
+    	map = new GMaps({
+    	  el: '#map',
+        lat: 18.7753932,
+        lng: 98.98137426,
+    	 zoom:15
+    	});
+
+    	map.addMarker({
+        lat:  18.7753932,
+        lng: 98.98137426,
+    	  title: 'Lima'
+
+    	});
+      });
+    </script>
   </body>
 </html>
