--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Success media : หน้าหลัก</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/success-style" rel="stylesheet" type="text/css">
+    <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/carousel.css" rel="stylesheet">
@@ -20,13 +20,15 @@
     <header>
       <img class="" src="assets/img/Logo1.png" height="200px">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">หน้าหลัก</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto justify-content-center">
             <li class="nav-item active">
+              <a class="nav-link" href="#">หน้าหลัก<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">บริการ<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -100,44 +102,59 @@
         <!-- Three columns of text below the carousel -->
         <div class="">
           <div class="container marketing">
-            <h1 class="display-1 text-center">ประวัติร้าน</h1>
+            <h1 class="display-4 text-center">ประวัติร้าน</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
-
+      </div>
         <!-- START THE FEATURETTES -->
                     <div class="container">
-                      <h1 class="display-1 text-center">ผลงาน</h1>
+                      <h1 class="display-4 text-center">ผลงาน</h1>
                       <div class="row">
-                          <div class="col-lg-4">
+                          <div class="col-lg-4 mb-3">
                               <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
                               <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
                               </a>
                         </div>
 
-                        <div class=" col-lg-4">
+                        <div class=" col-lg-4 mb-3">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
                              <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
                              </a>
                       </div>
 
-                      <div class=" col-lg-4">
+                      <div class=" col-lg-4 mb-3">
                           <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
                           <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
                            </a>
                     </div>
+                    <div class="col-lg-4 mb-3">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                        <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                        </a>
                   </div>
+
+                  <div class=" col-lg-4 mb-3">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                       <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                       </a>
+                  </div>
+
+                  <div class=" col-lg-4 mb-3">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
+                      <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                       </a>
                 </div>
-                    <!--END ITEM-->
+              </div>
+            </div>
+        <!--END ITEM-->
 
         <div class="container">
-          <h1 class="display-1 text-center">แผนที่</h1>
-            <div id="g-map" class="block">
+          <h1 class="display-4 text-center">แผนที่</h1>
                 <div id="map"></div>
-            </div>
       </div>
         <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container text-center">
               <p>&copy; 2018 Success media All Right Reserved.</p>
       </footer>
     <!-- Bootstrap core JavaScript
@@ -148,28 +165,28 @@
     <script src="assets/js/vendor/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/jquery-1.11.1.min"></script>
-    <script src="assets/js/gmaps.js"></script>
-    <!-- <script src="assets/js/gmaps.min.js"></script> -->
-    <!-- /END THE FEATURETTES -->
+    <!-- BEGIN EXTEND JAVASCRIPT-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="assets/js/gmaps.js"></script>
     <!--Map Marker-->
     <script type="text/javascript">
-    	var map;
-      $(document).ready(function(){
-    	map = new GMaps({
-    	  el: '#map',
-        lat: 18.7753932,
-        lng: 98.98137426,
-    	 zoom:15
-    	});
+      var map;
+          $(document).ready(function(){
+          map = new GMaps({
+            el: '#map',
+          lat:  18.7753932,
+          lng: 98.98137426,
+           zoom:17
+          });
 
-    	map.addMarker({
-        lat:  18.7753932,
-        lng: 98.98137426,
-    	  title: 'Lima'
+          map.addMarker({
+          lat:  18.7753932,
+          lng: 98.9813742,
+            title: 'Lima'
 
-    	});
-      });
+          });
+          });
     </script>
   </body>
 </html>
