--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
     <link href="assets/css/carousel.css" rel="stylesheet">
   </head>
   <body>
+
+      <!-- headerv-->
     <header>
-      <img class="" src="assets/img/Logo1.png" height="200px">
+        <div class="text-left mx-auto header-zone">
+        <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+        </div>
+          <div class="text-right mx-auto header-zone">
+          <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40">
+          </div>
+          <div class="text-right ms-auto header-zone">
+          <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40">
+          </div>
+        <div class="text-right ms-auto header-zone">
+        <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="40" height="40">
+        </div>
+    </header>
+      <!-- End headerv-->
+
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,8 +59,6 @@
           </ul>
         </div>
       </nav>
-    </header>
-
 
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
