--- a/index.html
+++ b/index.html
@@ -22,24 +22,35 @@
     <header>
         <div class="text-left mx-auto header-zone">
         <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-        </div>
           <div class="text-right mx-auto header-zone">
-          <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40">
-          </div>
+              <div class="col-lg-11 mb-3">
+              <a class="navbar-brand" href="#">
+              <img class="d-inline-block align-top" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40">
+              www.facebook.com/sc.media.cm </a></div>
           <div class="text-right ms-auto header-zone">
-          <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40">
+          <div class="col-lg-11 mb-3">
+          <a class="navbar-brand" href="#">
+          <img class="d-inline-block align-top" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40">
+          jookkook </a></div>
+              <div class="text-right ms-auto header-zone">
+              <div class="col-lg-11 mb-3">
+              <a class="navbar-brand" href="#">
+              <img class="d-inline-block align-top" src="assets/img/phone-icon.png" alt="phone-icon" width="40" height="40">
+              053-327044 </a></div>
+              </div>
+            </div>
           </div>
-        <div class="text-right ms-auto header-zone">
-        <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="40" height="40">
         </div>
     </header>
       <!-- End headerv-->
 
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <!-- navbar-->
+      <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="container">
           <ul class="navbar-nav mr-auto justify-content-center">
             <li class="nav-item active">
               <a class="nav-link" href="#">หน้าหลัก<span class="sr-only">(current)</span></a>
@@ -47,18 +58,29 @@
             <li class="nav-item">
               <a class="nav-link" href="#">บริการ<span class="sr-only">(current)</span></a>
             </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  ผลงาน</a><span class="sr-only">(current)</span>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">ไวนิล</a>
+                  <a class="dropdown-item" href="#">สติ๊กเกอร์</a>
+                  <a class="dropdown-item" href="#">ตู้ไฟ</a>
+                  <a class="dropdown-item" href="#">นามบัตร</a>
+                  <a class="dropdown-item" href="#">โครงเหล็ก</a>
+                </div>
+              </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ผลงาน</a>
+              <a class="nav-link" href="#">เกี่ยวกับ</a><span class="sr-only">(current)</span>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">เกี่ยวกับ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">ติดต่อ</a>
+              <a class="nav-link" href="#">ติดต่อ</a><span class="sr-only">(current)</span>
             </li>
           </ul>
         </div>
+        </div>
       </nav>
+
+      <!-- End navbar-->
 
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
