--- a/index-poring-edit.html
+++ b/index-poring-edit.html
@@ -12,8 +12,9 @@
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="assets/css/carousel.css" rel="stylesheet">
-     <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
+<!--     <link href="assets/css/carousel.css" rel="stylesheet">
+     <link href="assets/css/success-style.css" rel="stylesheet" type="text/css"> -->
+     <link href="assets/css/videos.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
@@ -60,54 +61,25 @@
           </ul>
         </div>
       </nav>
-
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="" src="assets/img/Success1.jpg" alt="Responsive image">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1></h1>
-                <p></p>
-                <p></p>
-              </div>
+   
+     <!--  ======= BEGIN VIDEOS  ========= -->
+     <div class="bg-success">
+      <div class="videos-zone">
+           <div class="homepage-hero-module">
+			    <div class="video-container">
+			        <div class="filter"></div>
+			        <video autoplay loop class="fillWidth">
+			            <source src="assets/videos/discussing_features.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+			            <source src="assets/videos/discussing_features.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+			        </video>
+			        <div class="poster hidden">
+			            <img src="assets/videos/discussing_features.jpg" alt="">
+			        </div>
+                 </div>
             </div>
-          </div>
-        </div>
-          <div class="carousel-item">
-            <img class="second-slide" src="assets/img/Success1.jpg" alt="Responsive image">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="assets/img/Success1.jpg" alt="Responsive image">
-            <div class="container">
-              <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-  </div>
+      </div>
+    </div>
+     <!--  ======= END VIDEOS  ========= -->
      
 
     <!--  ======= BEGIN HISTORY SUCESS ========= -->
@@ -178,13 +150,79 @@
     <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="assets/js/vendor/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    	
+    	//jQuery is required to run this code
+$( document ).ready(function() {
+
+    scaleVideoContainer();
+
+    initBannerVideoSize('.video-container .poster img');
+    initBannerVideoSize('.video-container .filter');
+    initBannerVideoSize('.video-container video');
+
+    $(window).on('resize', function() {
+        scaleVideoContainer();
+        scaleBannerVideoSize('.video-container .poster img');
+        scaleBannerVideoSize('.video-container .filter');
+        scaleBannerVideoSize('.video-container video');
+    });
+
+});
+
+function scaleVideoContainer() {
+
+    var height = $(window).height() + 5;
+    var unitHeight = parseInt(height) + 'px';
+    $('.homepage-hero-module').css('height',unitHeight);
+
+}
+
+function initBannerVideoSize(element){
+
+    $(element).each(function(){
+        $(this).data('height', $(this).height());
+        $(this).data('width', $(this).width());
+    });
+
+    scaleBannerVideoSize(element);
+
+}
+
+function scaleBannerVideoSize(element){
+
+    var windowWidth = $(window).width(),
+    windowHeight = $(window).height() + 5,
+    videoWidth,
+    videoHeight;
+
+    // console.log(windowHeight);
+
+    $(element).each(function(){
+        var videoAspectRatio = $(this).data('height')/$(this).data('width');
+
+        $(this).width(windowWidth);
+
+        if(windowWidth < 1000){
+            videoHeight = windowHeight;
+            videoWidth = videoHeight / videoAspectRatio;
+            $(this).css({'margin-top' : 0, 'margin-left' : -(videoWidth - windowWidth) / 2 + 'px'});
+
+            $(this).width(videoWidth).height(videoHeight);
+        }
+
+        $('.homepage-hero-module .video-container video').addClass('fadeIn animated');
+
+    });
+}
+    </script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <!-- BEGIN EXTEND JAVASCRIPT-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<!--     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="assets/js/gmaps.js"></script>
+    <script type="text/javascript" src="assets/js/gmaps.js"></script> -->
     <!--Map Marker-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var map;
           $(document).ready(function(){
           map = new GMaps({
@@ -201,6 +239,6 @@
 
           });
           });
-    </script>
+    </script> -->
   </body>
 </html>
