--- a/light.html
+++ b/light.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/favicon.ico">
 
-    <title>Success media : บริการ</title>
+    <title>Success media : ผลงาน</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -45,11 +45,19 @@
             <li class="nav-item px-5">
               <a class="nav-link" href="index.html">หน้าหลัก</a>
             </li>
-            <li class="nav-item active px-5">
+            <li class="nav-item px-5">
               <a class="nav-link" href="services.html">บริการ</a>
             </li>
-            <li class="nav-item px-5">
-              <a class="nav-link" href="work.html">ผลงาน</a>
+            <li class="nav-item dropdown px-5">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    ผลงาน</a><span class="sr-only">(current)</span>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="lihgt.html">ไวนิล</a>
+                    <a class="dropdown-item" href="#">สติ๊กเกอร์</a>
+                    <a class="dropdown-item" href="#">ตู้ไฟ</a>
+                    <a class="dropdown-item" href="#">นามบัตร</a>
+                    <a class="dropdown-item" href="#">โครงเหล็ก</a>
+                  </div>
             </li>
             <li class="nav-item px-5">
               <a class="nav-link px-5" href="#">เกี่ยวกับ</a>
@@ -59,107 +67,53 @@
             </li>
           </ul>
         </div>
-        </div>
       </nav>
 
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <hr>
-                      <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
+                      <h1 class="display-2 text-center font-special-style text-success1">'ผลงาน'</h1>
                       <div class="row">
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
                             <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full2.jpg">
                              <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full3.jpg">
                             <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
 
-                        <div class="col-lg-4 mb-4">
+                        <div class="col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full4.jpg">
                             <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full5.jpg">
                              <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full6.jpg">
                             <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
 
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full7.jpg">
                             <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
-                        <div class=" col-lg-4 mb-4">
+                        <div class=" col-lg-6 mb-6">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full8.jpg">
                             <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full9.jpg">
-                            <img src="assets/img-service/9.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full10.jpg">
-                            <img src="assets/img-service/10.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full11.jpg">
-                            <img src="assets/img-service/11.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full12.jpg">
-                            <img src="assets/img-service/12.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full13.jpg">
-                            <img src="assets/img-service/13.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full14.jpg">
-                            <img src="assets/img-service/14.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full15.jpg">
-                            <img src="assets/img-service/15.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full16.jpg">
-                            <img src="assets/img-service/16.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full17.jpg">
-                            <img src="assets/img-service/17.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-4 mb-4">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full18.jpg">
-                            <img src="assets/img-service/18.jpg" class="img-fluid" alt="Image 1">
                              </a>
                         </div>
                     </div>
@@ -176,6 +130,7 @@
       <footer class="text-center bg-success1 py-2">
               <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
       </footer>
+    </br>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
