--- a/index.html
+++ b/index.html
@@ -48,16 +48,8 @@
             <li class="nav-item px-5">
               <a class="nav-link" href="services.html">บริการ</a>
             </li>
-            <li class="nav-item dropdown px-5">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    ผลงาน</a><span class="sr-only">(current)</span>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">ไวนิล</a>
-                    <a class="dropdown-item" href="#">สติ๊กเกอร์</a>
-                    <a class="dropdown-item" href="#">ตู้ไฟ</a>
-                    <a class="dropdown-item" href="#">นามบัตร</a>
-                    <a class="dropdown-item" href="#">โครงเหล็ก</a>
-                  </div>
+            <li class="nav-item px-5">
+              <a class="nav-link" href="work.html">ผลงาน</a>
             </li>
             <li class="nav-item px-5">
               <a class="nav-link px-5" href="#">เกี่ยวกับ</a>
@@ -66,6 +58,7 @@
               <a class="nav-link px-5" href="#">ติดต่อ</a>
             </li>
           </ul>
+        </div>
         </div>
       </nav>
 
@@ -145,31 +138,31 @@
                         </div>
 
                         <div class=" col-lg-4 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                             <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full2.jpg">
+                             <img src="assets/img/2.jpg" class="img-fluid" alt="Image 1">
                              </a>
                       </div>
 
                       <div class=" col-lg-4 mb-3">
-                          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                          <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                          <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full3.jpg">
+                          <img src="assets/img/3.jpg" class="img-fluid" alt="Image 1">
                            </a>
                     </div>
                     <div class="col-lg-4 mb-3">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                        <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full4.jpg">
+                        <img src="assets/img/4.jpg" class="img-fluid" alt="Image 1">
                         </a>
                   </div>
 
                   <div class=" col-lg-4 mb-3">
-                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                       <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full5.jpg">
+                       <img src="assets/img/5.jpg" class="img-fluid" alt="Image 1">
                        </a>
                   </div>
 
                   <div class=" col-lg-4 mb-3">
-                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full1.jpg">
-                      <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
+                      <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img/full6.jpg">
+                      <img src="assets/img/6.jpg" class="img-fluid" alt="Image 1">
                        </a>
                 </div>
               </div>
@@ -186,7 +179,6 @@
       <footer class="text-center bg-success1 py-2">
               <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
       </footer>
-    </br>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
