--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
               <a class="nav-link" href="work.html">ผลงาน</a>
             </li>
             <li class="nav-item px-5">
-              <a class="nav-link px-5" href="#">เกี่ยวกับ</a>
+              <a class="nav-link px-5" href="contact.html">เกี่ยวกับ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">ติดต่อ</a>
+              <a class="nav-link px-5" href="about.html">ติดต่อ</a>
             </li>
           </ul>
         </div>
