--- a/services.html
+++ b/services.html
@@ -52,10 +52,10 @@
               <a class="nav-link" href="work.html">ผลงาน</a>
             </li>
             <li class="nav-item px-5">
-              <a class="nav-link px-5" href="#">เกี่ยวกับ</a>
+              <a class="nav-link px-5" href="contact.html">เกี่ยวกับ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-5" href="#">ติดต่อ</a>
+              <a class="nav-link px-5" href="about.html">ติดต่อ</a>
             </li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <hr>
-                      <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
+                      <h1 class="display-2 text-center font-special-style text-success1">บริการ</h1>
                       <div class="row">
                         <div class="col-lg-4 mb-4">
                             <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
